     them an address for cases where they are not explicitly
     specified (wildcard or localhost bind).  reported by daveroth AT
     acm.org; ok dtucker@ deraadt@
   - dtucker@cvs.openbsd.org 2006/12/13 08:34:39
     [servconf.c]
     Make PermitOpen work with multiple values like the man pages says.
     bz #1267 with details from peter at dmtz.com, with & ok djm@

20061205
 - (djm) [auth.c] Fix NULL pointer dereference in fakepw().  Crash would
   occur if the server did not have the privsep user and an invalid user
   tried to login and both privsep and krb5 auth are disabled; ok dtucker@
 - (djm) [bsd-asprintf.c] Better test for bad vsnprintf lengths; ok dtucker@

20061108
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2006/11/07 13:02:07
     [dh.c]
     BN_hex2bn returns int; from dtucker@

20061107
 - (dtucker) [sshd.c] Use privsep_pw if we have it, but only require it
   if we absolutely need it.  Pointed out by Corinna, ok djm@
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2006/11/06 21:25:28
     [auth-rsa.c kexgexc.c kexdhs.c key.c ssh-dss.c sshd.c kexgexs.c
     ssh-keygen.c bufbn.c moduli.c scard.c kexdhc.c sshconnect1.c dh.c rsa.c]
     add missing checks for openssl return codes; with & ok djm@
   - markus@cvs.openbsd.org 2006/11/07 10:31:31
     [monitor.c version.h]
     correctly check for bad signatures in the monitor, otherwise the monitor
     and the unpriv process can get out of sync. with dtucker@, ok djm@,
     dtucker@
 - (dtucker) [README contrib/{caldera,redhat,contrib}/openssh.spec] Bump
   versions.
 - (dtucker) Release 4.5p1.

20061105
 - (djm) OpenBSD CVS Sync
   - otto@cvs.openbsd.org 2006/10/28 18:08:10
     [ssh.1]
     correct/expand example of usage of -w; ok jmc@ stevesk@
   - markus@cvs.openbsd.org 2006/10/31 16:33:12
     [kexdhc.c kexdhs.c kexgexc.c kexgexs.c]
     check DH_compute_key() for -1 even if it should not happen because of