@@ -21,6 +21,10 @@
      [servconf.c]
      Make PermitOpen work with multiple values like the man pages says.
      bz #1267 with details from peter at dmtz.com, with & ok djm@
+   - dtucker@cvs.openbsd.org 2006/12/14 10:01:14
+     [servconf.c]
+     Make "PermitOpen all" first-match within a block to match the way other
+     options work.  ok markus@ djm@
 
 20061205
  - (djm) [auth.c] Fix NULL pointer dereference in fakepw().  Crash would
@@ -2641,4 +2645,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4596 2007/01/05 05:28:36 djm Exp $
+$Id: ChangeLog,v 1.4597 2007/01/05 05:29:02 djm Exp $
